# BakedIDE

./: .gitignore  README.md  package-lock.json  package.json
assets/themes/: baked-theme.json
src/main/: lspManager.js  main.js
src/preload/: preload.js
src/renderer/: buildSystem.js  editor.js  fileTree.js  git.js  index.html  lsp.js  search.js  settings.js  terminal.js
tests/: CMakeLists.txt  test_sample.cpp
tests/.bakedide/: config.json
tests/randomFiles/: randomFile.cpp  randomFile.h
